--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,8 @@
     </h3>
 
     <p>WhatsApp: 3187652868 <br> Correo electronico riverajhon87@gmail.com</p>
-    
+<hr>
+    <a href="FASE 2/desing.html">Actividad Fase 2. Interfaz de Usuario (Interacción Hombre - Ordenador) </a>
 
 </body>
 </html>
