--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1>Proyecto de Sitio Web 2021 - Periodo 16-1 <br></h1>
     <h3><br> Jhon Fredy Rivera Londoño <br>
@@ -14,8 +16,10 @@
     </h3>
 
     <p>WhatsApp: 3187652868 <br> Correo electronico riverajhon87@gmail.com</p>
-<hr>
-    <a href="FASE 2/desing.html">Actividad Fase 2. Interfaz de Usuario (Interacción Hombre - Ordenador) </a>
+    <hr>
+    <a href="FASE 2/desing.html">Actividad Fase 2. Interfaz de Usuario (Interacción Hombre - Ordenador) </a> <br><br>
+    <a href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/index.html">Actividad Fase 3. Interfaz de Usuario.</a>
 
 </body>
+
 </html>
