--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
     <p>WhatsApp: 3187652868 <br> Correo electronico riverajhon87@gmail.com</p>
     <hr>
     <a href="FASE 2/desing.html">Actividad Fase 2. Interfaz de Usuario (Interacción Hombre - Ordenador) </a> <br><br>
-    <a href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/index.html">Actividad Fase 3. Interfaz de Usuario.</a>
+    <a href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/Index.html">Actividad Fase 3. Interfaz de Usuario.</a>
 
 </body>
 
