--- a/FASE 3/autor.html
+++ b/FASE 3/autor.html
@@ -20,24 +20,26 @@
     <nav>
         <ul class="menu">
             <li><a
-                    href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/index.html">Inicio</a>
+                    href="index.html">Inicio</a>
             </li>
             <li class="boton"><a href="##">Temas</a>
                 <div class="Listadesplegable">
                     <a
-                        href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/tema1.html">Interacción
+                        href="tema1.html">Interacción
                         Persona Computadora I.P.C </a>
                     <a
-                        href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/tema2%20.html">Ingeniería
+                        href="tema2.html">Ingeniería
                         de la Usabilidad </a>
                 </div>
             </li>
             <li class="boton"><a href="##">Recursos Digitales</a>
                 <div class="Listadesplegable">
                     <a
-                        href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/recursoPDF%20.html">Documento
+                        href="recursoPDF.html">Documento
                         PDF </a>
-                    <a href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/recursoVideo.html">Video </a>
+                    <a
+                        href="recursoVideo.html">Video
+                    </a>
                 </div>
             </li>
             <li class="boton"><a href="##">Aprendizaje</a>
@@ -46,7 +48,9 @@
                     <a href="#">Actividad 2</a>
                 </div>
             </li>
-            <li><a href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/autor%20.html">Autor</a></li>
+            <li><a
+                    href="autor.html">Autor</a>
+            </li>
 
         </ul>
     </nav>
@@ -55,22 +59,23 @@
             <article>
                 <h3>
                     <br>
-                    Diseño Centrado en el Usuario y Computación Afectiva: las Emociones.
+                    Acerca del autor.
                 </h3>
-
-                <iframe width="900" height="600" src="pdf/Documento1.pdf" frameborder="0"> </iframe>
+                <div class="imgAutor">
+                    <img width="150px" src="./imagenes/jhon.png" alt="">
+                </div>
             </article>
-
-
-            <br><br><br><br><br><br><br>
+            <br>
             <article>
-                <h1>Bibliografía</h1>
-                Albornoz, M.C., Berón, M., Montejano, G.A. (2017). SEDICI - Repositorio Institucional de la
-                UNLP. [Microsoft Word - WICC 2017 - LIbro ISBN.docx]. Recuperado de:
-                <a
-                    href=" http://sedici.unlp.edu.ar/bitstream/handle/10915/62078/Documento_completo.pdf-PDFA.pdf?sequence=1&isAllowed=y">
-                    http://sedici.unlp.edu.ar/bitstream/handle/10915/62078/Documento_completo.pdf-PDFA.pdf?sequence=1&isAllowed=y</a><br><br>
+                <p>
+                <h3>Nombres:     Jhon F. Rivera Londoño <br>
+                    Código:      1.130.591.364 <br>
+                    Programa:    Ingenieria de Sistemas <br>
+                    Correo:      riverajhon87@gmail.com <br>
+                    Skype:       riverajhon87@hotmail.com</h3>
+                </p>
             </article>
+            <br><br><br>
         </section>
         <aside>
             <iframe
@@ -80,8 +85,7 @@
                 allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
         </aside>
     </div>
-    <footer> Jhon F. Rivera Londoño - Diseño de Sitios Web.</footer>
-
+    <footer>Jhon F. Rivera Londoño - Diseño de Sitios Web.</footer>  
 </body>
 
 </html>
