--- a/FASE 3/tema1.html
+++ b/FASE 3/tema1.html
@@ -20,24 +20,24 @@
     <nav>
         <ul class="menu">
             <li><a
-                    href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/index.html">Inicio</a>
+                    href="index.html">Inicio</a>
             </li>
             <li class="boton"><a href="##">Temas</a>
                 <div class="Listadesplegable">
                     <a
-                        href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/tema1.html">Interacción
+                        href="tema1.html">Interacción
                         Persona Computadora I.P.C </a>
                     <a
-                        href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/tema2%20.html">Ingeniería
+                        href="tema2.html">Ingeniería
                         de la Usabilidad </a>
                 </div>
             </li>
             <li class="boton"><a href="##">Recursos Digitales</a>
                 <div class="Listadesplegable">
                     <a
-                        href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/recursoPDF%20.html">Documento
+                        href="recursoPDF.html">Documento
                         PDF </a>
-                    <a href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/recursoVideo.html">Video </a>
+                    <a href="recursoVideo.html">Video </a>
                 </div>
             </li>
             <li class="boton"><a href="##">Aprendizaje</a>
@@ -46,7 +46,7 @@
                     <a href="#">Actividad 2</a>
                 </div>
             </li>
-            <li><a href="file:///D:/UNAD/PERIODO%202021%20I/DISE%C3%91O%20DE%20SITIOS%20WEB/FASE%201%20-%20PLANEACION/DSW-JhonRivera/FASE%203/autor%20.html">Autor</a></li>
+            <li><a href="autor.html">Autor</a></li>
 
         </ul>
     </nav>
