--- a/FASE 3/recursoPDF.html
+++ b/FASE 3/recursoPDF.html
@@ -58,7 +58,7 @@
                     Diseño Centrado en el Usuario y Computación Afectiva: las Emociones.
                 </h3>
 
-                <iframe width="900" height="600" src="pdf/Documento1.pdf" frameborder="0"> </iframe>
+                <iframe width="900" height="600" src="PDF/Documento1.pdf" frameborder="0"> </iframe>
             </article>
 
 
